--- a/client/src/routes/Home/Home.scss
+++ b/client/src/routes/Home/Home.scss
@@ -7,6 +7,66 @@
         flex-direction: row;
         justify-content: space-evenly;
 
+        .home-desc {
+            display: flex;
+            flex-direction: column;
+            font-size: 1.5rem;
+            font-weight: 400;
+            margin-bottom: 20px;
+            max-width: 60%;
+            padding: 15px;
+            border-radius: 10px;
+
+            p {
+                margin-top: 0;
+                max-width: 800px;
+                color: gray;
+            }
+
+            .home-button {
+                max-width: fit-content;
+                font-size: 1rem;
+                font-weight: bold;
+                text-transform: uppercase;
+                border: 1px solid #000;
+                color: #fff;
+                background-color: #000;
+                border-radius: 15px;
+                padding: 15px 25px;
+                transition: all 0.3s ease-in-out;
+                cursor: pointer;
+                margin-top: 15px;
+            }
+
+            .demographics {
+                display: flex;
+                flex-direction: row;
+
+                .demographic-item {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    margin: 50px 50px 0 0;
+
+                    >span {
+                        margin-top: 5px;
+                    }
+
+                    :nth-child(1) {
+                        color: #004AAD;
+                        font-weight: bold;
+                    }
+
+                    :nth-child(2) {
+                        color: gray;
+                        font-size: 18px;
+                        font-weight: bold;
+                        letter-spacing: 1px;
+                    }
+                }
+            }
+        }
+
         .hero-image {
             width: 100%;
             height: 100%;
@@ -15,44 +75,6 @@
             max-width: 500px;
             max-height: 500px;
         }
-
-        .home-desc {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            align-items: center;
-            font-size: 1.5rem;
-            font-weight: 400;
-            margin-bottom: 20px;
-            max-width: 500px;
-            padding: 15px;
-            border: 2px solid #000;
-            border-radius: 10px;
-
-            h2,
-            p {
-                color: #004AAD;
-            }
-
-            .home-button {
-                max-width: fit-content;
-                font-size: 1.3rem;
-                font-weight: bold;
-                border: 1px solid #000;
-                color: #004AAD;
-                border-radius: 5px;
-                padding: 15px 25px;
-                transition: all 0.3s ease-in-out;
-                cursor: pointer;
-                margin-top: 15px;
-
-                &:hover {
-                    background-color: #000;
-                    color: #FF5757;
-                }
-            }
-        }
-
     }
 
 }
