--- a/client/src/routes/Home/Home.scss
+++ b/client/src/routes/Home/Home.scss
@@ -1,8 +1,7 @@
 .home-container {
-    // background-color: #f5f5f5;
     padding: 20px;
 
-    .home-heder-section {
+    .home-header-section {
         display: flex;
         flex-direction: row;
         justify-content: space-evenly;
